return jwt token in the payload
