# toeggeler-server/docs/swagger.json
@@ -35,7 +35,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.AuthenResponse"
+                        }
                     }
                 }
             }
@@ -97,7 +100,7 @@
                 "tags": [
                     "Stats"
                 ],
-                "summary": "Get statistics for all availabl users (FAKE DATA)",
+                "summary": "Get statistics for all available users (FAKE DATA)",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -337,6 +340,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.AuthenResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
